# Whisper.cpp.pybind

./: example.py  pyproject.toml  setup.py
